[package]
name = "spike_rs"
version = "0.1.0"
authors = ["Krzysztof Grobelak <krzysztof.grobelak@gmail.com>"]
edition = "2018"

[dependencies]
actix = { version="0.8.0", features=["http"] }
actix-web = { version="1.0.0-alpha.6" }
diesel = { version="1.4.0", features=["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
futures = "0.1.25"
env_logger = "0.6"
num_cpus = "1.0"
chrono = { version="0.4.6", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "0.4"